# mHC

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: train_config.py
notebooks/: blog_part1_svd_and_muon.ipynb  blog_part2_mhc_streams.ipynb
scripts/: plot_results.py  run_all.sh
src/: __init__.py  data.py  hyper_connections.py  model.py  muon.py  newton_schulz.py  train.py
tests/: test_mhc_identity.py  test_newton_schulz.py
